updated the characterization values